--- a/Queue/Makefile
+++ b/Queue/Makefile
@@ -11,7 +11,7 @@ circle_main.o:	circle_main.c depend.h
 				${CC} ${FLAGS} -c circle_main.c
 
 circle.o:		circle.c circle.h depend.h
-				${CC} ${FLAGS} -c circle.c -g
+				${CC} ${FLAGS} -c circle.c
 
 clean:			
 				rm circle
